--- a/vue-src/index.html
+++ b/vue-src/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
-    <script src="http://localhost:33969/__neutralino_globals.js"></script>
+    <script src="%PUBLIC_URL%/__neutralino_globals.js"></script>
   </head>
   <body>
     <div id="app"></div>
