--- a/vue-src/index.html
+++ b/vue-src/index.html
@@ -8,7 +8,7 @@
     
     
   
-  <script src="%PUBLIC_URL%/__neutralino_globals.js"></script>
+  <script src="http://localhost:37271/__neutralino_globals.js"></script>
 </head>
   <body>
     <div id="app"></div>
